add-piatto.cgi funziona

--- a/accesso-negato.html
+++ b/accesso-negato.html
@@ -32,6 +32,7 @@
             <div class="panel">
                <h1>ATTENZIONE</h1>
                <p>L'accesso a questa pagina è riservato solo ai possessori di pass e username.</p>
+               <p>Per accederci effettua il log-in nella pagina relativa <a href="login.html">Login</a></p>
             </div>
 		</div>
 	</div>
